--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tzdb"
-version = "0.3.10"
+version = "0.3.11"
 edition = "2018"
 authors = ["René Kijewski <crates.io@k6i.de>"]
 repository = "https://github.com/Kijewski/tzdb"
@@ -12,50 +12,30 @@ readme = "README.md"
 #rust-version = "1.55"
 
 [dependencies]
-# FIXME: using "default-features = false" is a breaking change
-tz-rs = { version = "^0.6.12", features = ["const"] }
-
-# optional dependencies
-iana-time-zone = { version = "^0.1.42", optional = true }
-phf = { version = "^0.10.0", default-features = false, optional = true }
-phf_shared = { version = "^0.10.0", default-features = false, optional = true }
+tzdb_05 = { package = "tzdb", version = "0.5.2" }
 
 [dev-dependencies]
-tz-rs = { version = "^0.6.12", default-features = false, features = ["const"] }
 proptest = "=1"
 test-strategy = "=0.1.2"
 structmeta = "=0.1.4"
 
 [features]
-default = ["by-name", "list", "local", "std", "fallback"]
-
-# Enables [tz_by_name()] to get a time zone at runtime by name:
-by-name = ["phf", "phf_shared"]
-
-# Enables [TZ_NAMES] to get a list of all shipped time zones:
-list = []
-
-# Enables [local_tz()] to get the system time zone:
-local = ["by-name", "iana-time-zone"]
-
-# Make the unparsed, binary tzdata of a time zone available:
-binary = []
-
-# Enable features that need the standard library `std`:
-std = ["alloc", "tz-rs/std"]
-
-# Enable features that need the standard library `alloc`:
-alloc = ["tz-rs/alloc"]
+default = ["std", "fallback"]
 
 # Compile for unknown target platforms, too:
-fallback = []
+fallback = ["tzdb_05/fallback"]
+
+# deprecated, unused:
+alloc = []
+binary = []
+by-name = []
+iana-time-zone = []
+list = []
+local = []
+phf = []
+phf_shared = []
+std = []
 
 [package.metadata.docs.rs]
 all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
-
-[workspace]
-members = [
-    ".",
-    "make-tzdb",
-]
