--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -225,7 +225,8 @@ jobs:
           target: ${{ matrix.target }}
           components: clippy
 
-      - run: cross rustc --target ${{ matrix.target }} -- --version || cargo +stable install cross --force
+      - name: Install "cross"
+        run: curl --location --silent --show-error --fail https://github.com/cargo-bins/cargo-quickinstall/releases/download/cross-0.2.4-x86_64-unknown-linux-gnu/cross-0.2.4-x86_64-unknown-linux-gnu.tar.gz | tar -xzvvf - -C $HOME/.cargo/bin
       - run: cross check --target ${{ matrix.target }} --package tzdb --all-targets
       - run: cross clippy --target ${{ matrix.target }} --package tzdb --all-targets -- -D warnings
       - run: cross build --target ${{ matrix.target }} --package tzdb --lib
@@ -253,7 +254,8 @@ jobs:
           target: ${{ matrix.target }}
           components: clippy
 
-      - run: cross rustc --target ${{ matrix.target }} -- --version || cargo +stable install cross --force
+      - name: Install "cross"
+        run: curl --location --silent --show-error --fail https://github.com/cargo-bins/cargo-quickinstall/releases/download/cross-0.2.4-x86_64-apple-darwin/cross-0.2.4-x86_64-apple-darwin.tar.gz | tar -xzvvf - -C $HOME/.cargo/bin
       - run: cross check --target ${{ matrix.target }} --package tzdb --all-targets
       - run: cross clippy --target ${{ matrix.target }} --package tzdb --all-targets -- -D warnings
       - run: cross build --target ${{ matrix.target }} --package tzdb --lib
