--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ tz-rs = { version = "^0.6.14", default-features = false, features = ["const", "s
 iana-time-zone = { version = "^0.1.50", default-features = false }
 
 [dev-dependencies]
-criterion = "^0.3.6"
+criterion = { version = "^0.3.6", default-features = false }
 proptest = "=1.0"
 rand = { version = "^0.8.5", default-features = false, features = ["std", "small_rng"] }
 test-strategy = "=0.1.2"
@@ -24,6 +24,8 @@ structmeta = "=0.1.4"
 
 # 1.15 is edition 2021, used (transitively) by criterion
 once_cell = "=1.14"
+# 1.2 is edition 2021, used (transitively) by criterion
+csv = "=1.1"
 
 [features]
 default = ["fallback"]
