Update to 2023a, simplify features, re-use v0.5.x
* Update to [Time Zone Database 2023a](https://mm.icann.org/pipermail/tz-announce/2023-January/000077.html)
* Make the features `binary`, `by-name`, `list` always present
* Use the same generated code as the v0.5.x branch

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -147,7 +147,7 @@ jobs:
           target: ${{ matrix.target }}
 
       - name: Test
-        run: cargo miri test --package tzdb --no-default-features --features by-name --target ${{ matrix.target }} -- --show-output
+        run: cargo miri test --package tzdb --no-default-features --target ${{ matrix.target }} -- --show-output
 
   doc:
     runs-on: ubuntu-20.04
@@ -190,42 +190,6 @@ jobs:
         uses: actions-rs/audit-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-
-  powerset:
-    strategy:
-      fail-fast: false
-      matrix:
-        toolchain:
-          - "1.60"
-          - stable
-          - nightly
-        platform:
-          - ubuntu-20.04
-          # - windows-2022
-          # - macos-12
-        versions:
-          - ""
-          - "-Zminimal-versions"
-
-    runs-on: ${{ matrix.platform }}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Setup Rust
-        uses: ./.github/actions/setup-rust
-        with:
-          toolchain: ${{ matrix.toolchain }}
-
-      - name: Install hack
-        run: cargo hack --version || cargo +stable install cargo-hack --force
-
-      - run: cargo generate-lockfile ${{ matrix.versions }}
-        env:
-          RUSTC_BOOTSTRAP: 1
-
-      - name: Powerset
-        run: cargo hack test --feature-powerset --exclude-features default --ignore-private
 
   build-cross:
     strategy:
