--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,8 @@ structmeta = "=0.1.4"
 once_cell = "=1.14"
 # 1.2 is edition 2021, used (transitively) by criterion
 csv = "=1.1"
+# 1.8 is edition 2021, used (transitively) by criterion
+regex = "=1.7.3"
 # 1.7 has rust-version = "1.59", used (transitively) by criterion
 rayon = "=1.6"
 # 1.11 has rust-version = "1.59", used (transitively) by criterion
