bench: Use `xoroshiro128++` instead of `SmallRng`
The algo used in `SmallRng` not fixed, so it could be that different
inputs get benchmarked, making the result useless.

Also `SmallRng` does not like seeds with little popcounts. Since our
seeds are something like `0..100`, this is not quite optimal.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,8 @@ iana-time-zone = { version = "^0.1.50", default-features = false }
 [dev-dependencies]
 criterion = { version = "^0.3.6", default-features = false }
 proptest = "=1.0"
-rand = { version = "^0.8.5", default-features = false, features = ["std", "small_rng"] }
+rand = { version = "^0.8.5", default-features = false, features = ["std"] }
+rand_xoshiro = "^0.6.0"
 test-strategy = "=0.1.2"
 structmeta = "=0.1.4"
 
