--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -14,9 +14,9 @@ cargo-fuzz = true
 [dependencies]
 tzdb = { version = "*", path = ".." }
 
-afl = { version = "=0.12", optional = true }
-honggfuzz = { version = "=0.5", optional = true }
-libfuzzer-sys = { version = "=0.4", optional = true }
+afl = { version = "0.13", optional = true }
+honggfuzz = { version = "0.5", optional = true }
+libfuzzer-sys = { version = "0.4", optional = true }
 
 [[bin]]
 name = "tzdb-fuzz-afl"
