--- a/testing/Cargo.toml
+++ b/testing/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "tzdb-bench"
+name = "tzdb-testing"
 version = "0.0.0"
 edition = "2021"
 authors = ["René Kijewski <crates.io@k6i.de>"]
@@ -12,16 +12,10 @@ publish = false
 [dependencies]
 tzdb = { version = "*", path = ".." }
 
-[dev-dependencies]
-criterion = { version = "0.5", default-features = false }
-rand = { version = "0.8", default-features = false, features = ["std"] }
-rand_xoshiro = "0.6"
-test-strategy = "0.3"
-structmeta = "0.2"
-
-[[bench]]
-name = "by-name"
-harness = false
+proptest = "1.2.0"
+structmeta = "0.2.0"
+test-strategy = "0.3.1"
+tz-rs = { version = "^0.6.14", default-features = false, features = ["const", "std"] }
 
 [workspace]
 members = ["."]
