--- a/make-tzdb/Cargo.toml
+++ b/make-tzdb/Cargo.toml
@@ -9,11 +9,14 @@ license = "MIT OR Apache-2.0"
 publish = false
 
 [dependencies]
-anyhow = "=1"
-convert_case = "=0.6"
-indexmap = "=1"
-itertools = "=0.11"
-ron = "=0.8"
-serde = { version = "=1", features = ["derive"] }
-subprocess = "=0.2"
-tz-rs = "=0.6"
+anyhow = "1"
+convert_case = "0.6"
+indexmap = "2"
+itertools = "0.11"
+ron = "0.8"
+serde = { version = "1", features = ["derive"] }
+subprocess = "0.2"
+tz-rs = "0.6"
+
+[workspace]
+members = ["."]
