--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -12,9 +12,9 @@ edition = "2018"
 cargo-fuzz = true
 
 [dependencies]
-tzdb = { version = "*", path = ".." }
+tzdb = { version = "0.6.0-pre.1", path = ".." }
 
-afl = { version = "0.13", optional = true }
+afl = { version = "0.15", optional = true }
 honggfuzz = { version = "0.5", optional = true }
 libfuzzer-sys = { version = "0.4", optional = true }
 
