--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -12,7 +12,7 @@ edition = "2018"
 cargo-fuzz = true
 
 [dependencies]
-tzdb = { version = "0.6.0-pre.1", path = ".." }
+tzdb = { version = "0.6.0", path = ".." }
 
 afl = { version = "0.15", optional = true }
 honggfuzz = { version = "0.5", optional = true }
