--- a/testing/Cargo.toml
+++ b/testing/Cargo.toml
@@ -10,7 +10,7 @@ license = "Apache-2.0"
 publish = false
 
 [dependencies]
-tzdb = { version = "0.6.0-pre.1", path = ".." }
+tzdb = { version = "0.6.0", path = ".." }
 
 proptest = "1.2.0"
 structmeta = "0.2.0"
