--- a/benchmarks/Cargo.toml
+++ b/benchmarks/Cargo.toml
@@ -10,7 +10,7 @@ license = "Apache-2.0"
 publish = false
 
 [dependencies]
-tzdb = { version = "0.6.0", path = ".." }
+tzdb_data = { path = "../tzdb_data" }
 
 [dev-dependencies]
 criterion = { version = "0.5", default-features = false }
