--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,8 +69,8 @@ jobs:
           RUSTC_BOOTSTRAP: 1
         run: cargo generate-lockfile ${{ matrix.versions }}
 
-      - run: cargo check --package tzdb --all-targets
-      - run: cargo clippy --package tzdb --all-targets -- -D warnings
+      - run: cargo check --workspace --all-targets
+      - run: cargo clippy --workspace --all-targets -- -D warnings
 
   clippy-pedantic:
     runs-on: ubuntu-20.04
@@ -85,7 +85,7 @@ jobs:
         with:
           components: clippy
 
-      - run: cargo clippy --package tzdb --all-targets -- -D clippy::pedantic
+      - run: cargo clippy --workspace --all-targets -- -D clippy::pedantic
 
   test:
     runs-on: ubuntu-20.04
@@ -100,9 +100,9 @@ jobs:
         with:
           components: clippy
 
-      - run: cargo check --package tzdb --all-targets
-      - run: cargo clippy --package tzdb --all-targets -- -D warnings
-      - run: cargo test --package tzdb --all-targets
+      - run: cargo check --workspace --all-targets
+      - run: cargo clippy --workspace --all-targets -- -D warnings
+      - run: cargo test --workspace --all-targets
       - run: cargo run --package current-time
       - run: cd testing && cargo test
 
@@ -122,10 +122,10 @@ jobs:
           components: miri
 
       - name: Test (tzdb)
-        run: cargo miri test --package tzdb --all-targets
+        run: cargo miri test --workspace --all-targets
 
       - name: Test (testing)
-        run: cd testing && cargo miri test --package tzdb --all-targets
+        run: cd testing && cargo miri test --workspace --all-targets
 
   cross-miri:
     strategy:
@@ -153,7 +153,7 @@ jobs:
           target: ${{ matrix.target }}
 
       - name: Test
-        run: cargo miri test --package tzdb --target ${{ matrix.target }}
+        run: cargo miri test --workspace --target ${{ matrix.target }}
 
   doc:
     runs-on: ubuntu-20.04
@@ -169,7 +169,7 @@ jobs:
           toolchain: nightly
           components: rust-docs
 
-      - run: cargo doc --package tzdb --all-features --no-deps
+      - run: cargo doc --workspace --all-features --no-deps
         env:
           RUSTDOCFLAGS: -D warnings --cfg docsrs
 
@@ -189,68 +189,6 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
-  build-cross:
-    strategy:
-      fail-fast: false
-      matrix:
-        target:
-          - x86_64-unknown-freebsd
-          - x86_64-unknown-illumos
-          - x86_64-unknown-netbsd
-          - x86_64-linux-android
-          - i686-linux-android
-          - arm-linux-androideabi
-          - aarch64-linux-android
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          submodules: recursive
-
-      - name: Setup Rust
-        uses: ./.github/actions/setup-rust
-        with:
-          toolchain: stable
-          target: ${{ matrix.target }}
-          components: clippy
-
-      - name: Install "cross"
-        run: curl --location --silent --show-error --fail https://github.com/cargo-bins/cargo-quickinstall/releases/download/cross-0.2.5-x86_64-unknown-linux-gnu/cross-0.2.5-x86_64-unknown-linux-gnu.tar.gz | tar -xzvvf - -C $HOME/.cargo/bin
-      - run: cross check --target ${{ matrix.target }} --package tzdb --all-targets
-      - run: cross clippy --target ${{ matrix.target }} --package tzdb --all-targets -- -D warnings
-      - run: cross build --target ${{ matrix.target }} --package tzdb --lib
-      - run: cross build --target ${{ matrix.target }} --examples
-
-  build-cross-ios:
-    strategy:
-      fail-fast: false
-      matrix:
-        target:
-          - aarch64-apple-ios-sim
-          - aarch64-apple-ios
-          - x86_64-apple-ios
-    runs-on: macos-12
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          submodules: recursive
-
-      - name: Setup Rust
-        uses: ./.github/actions/setup-rust
-        with:
-          toolchain: stable
-          target: ${{ matrix.target }}
-          components: clippy
-
-      - name: Install "cross"
-        run: curl --location --silent --show-error --fail https://github.com/cargo-bins/cargo-quickinstall/releases/download/cross-0.2.5-x86_64-apple-darwin/cross-0.2.5-x86_64-apple-darwin.tar.gz | tar -xzvvf - -C $HOME/.cargo/bin
-      - run: cross check --target ${{ matrix.target }} --package tzdb --all-targets
-      - run: cross clippy --target ${{ matrix.target }} --package tzdb --all-targets -- -D warnings
-      - run: cross build --target ${{ matrix.target }} --package tzdb --lib
-      - run: cross build --target ${{ matrix.target }} --examples
-
   package:
     runs-on: ubuntu-20.04
     steps:
@@ -264,7 +202,7 @@ jobs:
         with:
           toolchain: stable
 
-      - run: cargo package --package tzdb
+      - run: cargo package --workspace
 
   devskim:
     name: DevSkim
