--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tzdb"
-version = "0.6.1-pre.1"
+version = "0.6.1"
 edition = "2018"
 authors = ["René Kijewski <crates.io@k6i.de>"]
 repository = "https://github.com/Kijewski/tzdb"
@@ -13,7 +13,7 @@ readme = "README.md"
 
 [dependencies]
 iana-time-zone = { version = "^0.1.50", default-features = false, features = ["fallback"], optional = true }
-tzdb_data = { version = "0.1.0-pre.1", default-features = false, path = "tzdb_data" }
+tzdb_data = { version = "^0.1.0", default-features = false, path = "tzdb_data" }
 tz-rs = { version = "^0.6.14", default-features = false, features = ["const", "std"] }
 
 [features]
