--- a/tzdb_data/Cargo.toml
+++ b/tzdb_data/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tzdb_data"
-version = "0.1.0-pre.1"
+version = "0.1.0"
 edition = "2018"
 authors = ["René Kijewski <crates.io@k6i.de>"]
 repository = "https://github.com/Kijewski/tzdb"
