--- a/make-tzdb/Cargo.toml
+++ b/make-tzdb/Cargo.toml
@@ -12,11 +12,12 @@ publish = false
 anyhow = "1"
 convert_case = "0.6"
 indexmap = "2"
-itertools = "0.11"
+itertools = "0.12"
 ron = "0.8"
 serde = { version = "1", features = ["derive"] }
 subprocess = "0.2"
 tz-rs = "0.6"
+walkdir = "2"
 
 [workspace]
 members = ["."]
