--- a/benchmarks/Cargo.toml
+++ b/benchmarks/Cargo.toml
@@ -15,6 +15,7 @@ tzdb_data = { path = "../tzdb_data" }
 
 [dev-dependencies]
 criterion = { version = "0.5", default-features = false, features = ["html_reports"] }
+minstant = "0.1"
 rand = { version = "0.8", default-features = false, features = ["std"] }
 rand_xoshiro = "0.6"
 test-strategy = "0.3"
